--- a/src/main/resources/assets/ganjacraft/lang/en_us.json
+++ b/src/main/resources/assets/ganjacraft/lang/en_us.json
@@ -60,5 +60,5 @@
   "block.ganjacraft.hemp_wall_sign": "Hemp Sign",
 
 
-  "itemGroup.ganjacraftModTab": "Ganja Craft"
+  "itemGroup.ganjacraftModTab": "Hempcraft"
 }
